# custom-language-impl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  code.txt
app/: CMakeLists.txt  LexerApp.cc  Main.cc  ParserApp.cc
docs/: LL1_EBNF.md  arr_access_test.txt  arr_op_basic_test.txt  documentation.md  dokumentacja_koncowa_tomasz_nejman.md  dokumentacja_poczatkowa_tomasz_nejman.md  num_op_test.txt  test.yaml
include/: ArgParser.hpp  VecCopy.hpp
include/Drivers/: Formatter.hpp  LexerDriver.h
include/Exceptions/InterpreterExceptions/: ConcreteInterpreterException.hpp  _InterpreterException.hpp  _InterpreterExceptionInclude.hpp
include/Exceptions/LexerExceptions/: FloatLiteralOutOfBoundsException.hpp  IntLiteralOutOfBoundsException.hpp  InvalidCharLiteralException.hpp  InvalidCommentStyleException.hpp  MalformedNumericLiteralException.hpp  TooLongIdentifierException.hpp  TooLongStringLiteralException.hpp  UnknownEscapedCharacterException.hpp  UnknownSymbolException.hpp  UnterminatedCharLiteralException.hpp  UnterminatedStringLiteralException.hpp  _LexerException.hpp  _LexerExceptionInclude.hpp
include/Exceptions/ParserException/: _ParserException.hpp
include/Exceptions/ParserExceptions/: ConcreteParserException.hpp  InvalidParameterException.hpp  InvalidTypeException.hpp  MissingBracketException.hpp  MissingExpressionException.hpp  MissingIdentifierException.hpp  MissingKeywordException.hpp  MissingNewlineException.hpp  MissingOperatorException.hpp  MissingParenthesisException.hpp  MissingRightOperandException.hpp  NotConsumedTokensException.hpp  _ParserException.hpp  _ParserExceptionInclude.hpp
include/Interpreter/: BuiltinFunctions.hpp  CallStack.h  Interpreter.h  InterpreterHelper.hpp  RuntimeValue.h  RuntimeValue.hpp  ValueEvaluator.hpp  Variable.h
include/Lexer/: ILexer.h  Lexer.h  LexerDriver.h  Limits.hpp  Token.hpp
include/Parser/: AstPrinterVisitor.h  AstSerializerVisitor.h  ErrorHandler.h  IFunction.hpp  INode.hpp  IParser.hpp  Node.h  Node.hpp  Parameter.hpp  ParameterDecl.h  ParameterDecl.hpp  Parser.h  ParserHelper.h  Types.hpp  Value.h  Value.hpp  Variable.h  Visitor.h
src/Drivers/: CMakeLists.txt  Formatter.cc  LexerDriver.cc
src/Interpreter/: CMakeLists.txt  CallStack.cc  Interpreter.cc  RuntimeValue.cc  Variable.cc
src/Lexer/: CMakeLists.txt  ILexer.h  Lexer.cc  LexerDriver.cc
src/Parser/: AstPrinterVisitor.cc  AstSerializerVisitor.cc  CMakeLists.txt  Node.cc  Parser.cc  ParserHelper.cc  Variable.cc
test/: CMakeLists.txt  TestHelper.hpp  testLexer.cc  testLexerKeywordsAndIdentifiers.cc  testLexerLiterals.cc  testLexerPositions.cc
test/AuxTest/: AuxTest.cc  CMakeLists.txt
test/InterpreterTest/: CMakeLists.txt  I10testInterpreterLiteralExpr.cc  I11testInterpreterPrimaryIdExpr.cc  I12testInterpreterArrSpecialOp.cc  I1testInterpreter.cc  I2testInterpreterFunctionDef.cc  I3testInterpreterVarDecl.cc  I4testInterpreterIfStmt.cc  I5testInterpreterWhileStmt.cc  I6testInterpreterAssignment.cc  I7testInterpreterBinaryExpr.cc  I8testInterpreterUnaryExpr.cc  I9testInterpreterCastExpr.cc  MockParser.hpp  TestHelperInterpreter.hpp
test/LexerTest/: CMakeLists.txt  TestHelperLex.hpp  testLexer.cc  testLexerKeywordsAndIdentifiers.cc  testLexerLiterals.cc  testLexerPositions.cc
test/ParserTest/: 1testParser.cc  2testParserFunctions.cc  3testParserVariableDeclarations.cc  4testParserIfStatement.cc  5testParserWhileAndLoopControl.cc  6testParserOperators.cc  7testParserLiterals.cc  CMakeLists.txt  MockLexer.hpp  TestHelperPars.hpp  testParser.cc  testParserFunctions.cc  testParserIfStatement.cc  testParserOperators.cc  testParserVariableDeclarations.cc
